chore: convert stream to list